Refactored test running arch.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,9 @@
+# This CMake file is used to compile the self-test of the library
+
 cmake_minimum_required(VERSION 3.26)
+
 project(bbunit_test)
 
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 17)
 
 add_executable(bbunit_test tests/tests.cpp)
