--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,4 +9,5 @@ nav:
     - First test: getting-started/first-test.md
   - Assertions:
     - List of assertions: assertions/list-assertions.md
+    - Exceptions: assertions/exceptions.md
   - Code structure: misc/structure.md
